--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">Hello World</h1>
-        <div id="mainDiv">Hello Div</div>
-        <br />
-        <button onclick="buttonClicked()">Click me</button>
+        <div id="convite">
+            <div class="nome">Isabelle</div>
+            <div class="titulo">Dia 30<br>de Agosto</div>
+            <div class="texto">Você está convidada a<br>
+            assistir comigo Interestelar</div>
+            <div class="texto1">Esteja pronta as 16:00, o motorista "Matheus" 
+            irá até sua casa lhe buscar.</div>
+            <div class="programacao">Programação do Dia:<br>
+            CINEMA JANTAR</div>
+            <div class="atencao">ATENÇÃO: NÃO É POSSÍVEL<br>REJEITAR ESTE CONVITE</div>
+            <div class="ps">ps: não sei fazer convite, nem no papel saberia, mas acho que fazer um site era uma ideia legal :D</div>
+        </div>
     </body>
 </html>
