--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <div class="texto1">Esteja pronta as 16:00, o motorista "Matheus" 
             irá até sua casa lhe buscar.</div>
             <div class="programacao">Programação do Dia:<br>
-            CINEMA JANTAR</div>
+            CINEMA E JANTAR</div>
             <div class="atencao">ATENÇÃO: NÃO É POSSÍVEL<br>REJEITAR ESTE CONVITE</div>
             <div class="ps">ps: me manda mensagem caso veja o email. E não sei fazer convite, nem no papel saberia, 
             mas acho que fazer um site era uma ideia legal :D</div>
         </div>
     </body>
 </html>
+
